updated problems worksheet 1

--- a/week1/worksheet_1.tex
+++ b/week1/worksheet_1.tex
@@ -43,24 +43,24 @@
 
 \maketitle
 
-1. Review: Balancing chemical equations.
-\begin{enumerate}
-\item[a)] \,\,\, C$_6$H$_{12}$O$_6$(s) + \,\,\, O$_2$(g) $\rightarrow$ \,\,\, CO$_2$(g) + \,\,\, O$_2$(g)
-  %combustion reaction
-\item[b)] \,\,\, C$_2$H$_6$(g) + \,\,\, O$_2$(g) $\rightarrow$ \,\,\, CO$_2$(g) + \,\,\, H$_2$O
-\item[c)] \,\,\, CuS(s) + \,\,\, HNO$_3$(aq) $\rightarrow$ \,\,\, CuSO$_4$(aq) + \,\,\, NO$_2$(g)
-  %extracting copper from the mineral covellite (CuS); Oxidation-reduction reaction
-\end{enumerate}
+%1. Review: Balancing chemical equations.
+%\begin{enumerate}
+%\item[a)] \,\,\, C$_6$H$_{12}$O$_6$(s) + \,\,\, O$_2$(g) $\rightarrow$ \,\,\, CO$_2$(g) + \,\,\, O$_2$(g)
+%  %combustion reaction
+%\item[b)] \,\,\, C$_2$H$_6$(g) + \,\,\, O$_2$(g) $\rightarrow$ \,\,\, CO$_2$(g) + \,\,\, H$_2$O
+%\item[c)] \,\,\, CuS(s) + \,\,\, HNO$_3$(aq) $\rightarrow$ \,\,\, CuSO$_4$(aq) + \,\,\, NO$_2$(g)
+%  %extracting copper from the mineral covellite (CuS); Oxidation-reduction reaction
+%\end{enumerate}
 
-2. Define state function. Determine whether the following are state functions:
+1. Define state function. Determine whether the following are state functions:
 \begin{enumerate}
 \item[a)] $q + w$ % yes
 \item[b)] $\Delta H$ % yes
 \item[c)] $q$ % no
-\item[d)] Density % yes
+\item[d)] Volume % no
 \end{enumerate}
 
-3. Which statement is true of the internal energy of a system and its
+2. Which statement is true of the internal energy of a system and its
 surroundings during an energy exchange with a positive $\Delta E_\text{sys}$?
 \begin{enumerate}
 \item[a)] The internal energy of the system increases, and the internal
@@ -74,9 +74,16 @@ surroundings during an energy exchange with a positive $\Delta E_\text{sys}$?
 \end{enumerate}
 % a)
 
-4. A system absorbs 196 kJ of heat, and the surroundings do 117 kJ
+3. A system absorbs 196 kJ of heat, and the surroundings do 117 kJ
 of work on the system. What is the change in internal energy of
 the system?
 % 313 kJ
 
+\vspace{1in}
+
+4. The air within a piston equipped with a cylinder absorbs 565 J of 
+heat and expands from an initial volume of 0.10 L to a final volume of
+ 0.85 L against an external pressure of 1.0 atm. What is the change in
+ internal energy of the air within the piston?
+% 489 J
 \end{document}
