--- a/week1/worksheet_1.tex
+++ b/week1/worksheet_1.tex
@@ -6,6 +6,7 @@
 % Packages and other includes
 % Pagination
 \usepackage[letterpaper, margin=1in]{geometry}
+\usepackage{emptypage}
 %
 % Fonts
 \usepackage[T1]{fontenc} % best for Western European languages
@@ -43,6 +44,57 @@
 
 \maketitle
 
+Weekly homework assignments are posted approximately one week prior to the
+due date. Collaborations are encouraged and students must report all collaborators
+in writing on each assignment. All external sources (websites, books) must be
+properly cited. Additional problems are listed at the end of each assignment.
+This week's assignment is due \textit{Monday, Jan 10th at 11:59pm.}
+
+\textbf{Zeroth Law of Thermodynamics}
+
+1. Suppose a system is in thermal equilibrium with a heat bath. If the temperature
+of the heat bath increases, describe in words and/or illustrations what happens to
+the temperature of the system.
+
+%\begin{center}
+%  \includegraphics[scale=0.3]{therm_equil.png}
+%\end{center}
+
+\vspace{1in}
+
+2. Consider two isolated systems illustrated below. One system (left) is at $100^\circ\text{C}$
+and the other (right) is at room temperature of $20^\circ\text{C}$. The isolated systems are allowed
+to come into contact reaching thermal equilibrium and without losing energy to the surrounding.
+What is the final temperature? Describe in words and/or illustrations what happened.
+
+\begin{center}
+  \includegraphics[scale=0.2]{isolated_sys.png}
+\end{center}
+
+\textbf{Ideal Gas Law}
+
+3. \textbf{Gay-Lussac's Law}: A $250.$ mL aerosol can at $25.0^\circ\text{C}$ and $1.10$ atm was
+thrown into an incinerator. When the temperature in the can reached $712^\circ\text{C}$, the
+can exploded. What was the pressure in the can just before it exploded, assuming it reached
+the maximum pressure possible at that temperature in $^\circ\text{C}$? Report answer to 3 significant figures.
+
+\vspace{2.5in}
+
+4. The Victor Meyer's method (illustrated below) is used to measure molecular mass. This
+is accomplished by vaporizing a known mass of a volatile solid or liquid and measuring
+the volume of air displaced over water. Suppose 0.200g of a white crystalline solid sample is
+vaporized. The gas is collected over water at 1.00 atm and $25.0^\circ\text{C}$ and displaces
+51.8 mL of air. What is the molar mass of the sample? Report to 3 significant figures.
+
+\begin{center}
+  \includegraphics[scale=0.5]{meyers.jpeg}
+\end{center}
+
+%phenol 94.11 g/mol
+
+\vfill
+\textbf{Additional Problems:} Ch. 10 - odd problems 25 - 57, 83, 85, and 89.
+
 %1. Review: Balancing chemical equations.
 %\begin{enumerate}
 %\item[a)] \,\,\, C$_6$H$_{12}$O$_6$(s) + \,\,\, O$_2$(g) $\rightarrow$ \,\,\, CO$_2$(g) + \,\,\, O$_2$(g)
@@ -52,38 +104,36 @@
 %  %extracting copper from the mineral covellite (CuS); Oxidation-reduction reaction
 %\end{enumerate}
 
-1. Define state function. Determine whether the following are state functions:
-\begin{enumerate}
-\item[a)] $q + w$ % yes
-\item[b)] $\Delta H$ % yes
-\item[c)] $q$ % no
-\item[d)] Volume % no
-\end{enumerate}
+%1. Define state function. Determine whether the following are state functions:
+%\begin{enumerate}
+%\item[a)] $q + w$ % yes
+%\item[b)] $\Delta H$ % yes
+%\item[c)] $q$ % no
+%\item[d)] Volume % no
+%\end{enumerate}
 
-2. Which statement is true of the internal energy of a system and its
-surroundings during an energy exchange with a positive $\Delta E_\text{sys}$?
-\begin{enumerate}
-\item[a)] The internal energy of the system increases, and the internal
-  energy of the surroundings decreases.
-\item[b)] The internal energy of both the system and the surroundings
-  increases.
-\item[c)] The internal energy of both the system and the surroundings
-  decreases.
-\item[d)] The internal energy of the system decreases, and the internal
-  energy of the surroundings increases.
-\end{enumerate}
+%2. Which statement is true of the internal energy of a system and its
+%surroundings during an energy exchange with a positive $\Delta E_\text{sys}$?
+%\begin{enumerate}
+%\item[a)] The internal energy of the system increases, and the internal
+%  energy of the surroundings decreases.
+%\item[b)] The internal energy of both the system and the surroundings
+%  increases.
+%\item[c)] The internal energy of both the system and the surroundings
+%  decreases.
+%\item[d)] The internal energy of the system decreases, and the internal
+%  energy of the surroundings increases.
+%\end{enumerate}
 % a)
 
-3. A system absorbs 196 kJ of heat, and the surroundings do 117 kJ
-of work on the system. What is the change in internal energy of
-the system?
+%3. A system absorbs 196 kJ of heat, and the surroundings do 117 kJ
+%of work on the system. What is the change in internal energy of
+%the system?
 % 313 kJ
 
-\vspace{1in}
-
-4. The air within a piston equipped with a cylinder absorbs 565 J of 
-heat and expands from an initial volume of 0.10 L to a final volume of
- 0.85 L against an external pressure of 1.0 atm. What is the change in
- internal energy of the air within the piston?
+%4. The air within a piston equipped with a cylinder absorbs 565 J of 
+%heat and expands from an initial volume of 0.10 L to a final volume of
+% 0.85 L against an external pressure of 1.0 atm. What is the change in
+% internal energy of the air within the piston?
 % 489 J
 \end{document}
