updated formatting worksheet 1

--- a/week1/worksheet_1.tex
+++ b/week1/worksheet_1.tex
@@ -48,7 +48,7 @@ Weekly homework assignments are posted approximately one week prior to the
 due date. Collaborations are encouraged and students must report all collaborators
 in writing on each assignment. All external sources (websites, books) must be
 properly cited. Additional problems are listed at the end of each assignment.
-This week's assignment is due \textit{Monday, Jan 10th at 11:59pm.}
+This week's assignment is due \textit{Tuesday, Jan 11th at 10:00am.}
 
 \textbf{Zeroth Law of Thermodynamics}
 
@@ -60,7 +60,7 @@ the temperature of the system.
 %  \includegraphics[scale=0.3]{therm_equil.png}
 %\end{center}
 
-\vspace{1in}
+\vspace{2in}
 
 2. Consider two isolated systems illustrated below. One system (left) is at $100^\circ\text{C}$
 and the other (right) is at room temperature of $20^\circ\text{C}$. The isolated systems are allowed
@@ -68,15 +68,17 @@ to come into contact reaching thermal equilibrium and without losing energy to t
 What is the final temperature? Describe in words and/or illustrations what happened.
 
 \begin{center}
-  \includegraphics[scale=0.2]{isolated_sys.png}
+  \includegraphics[scale=0.3]{isolated_sys.png}
 \end{center}
+
+\vspace{2.5in}
 
 \textbf{Ideal Gas Law}
 
 3. \textbf{Gay-Lussac's Law}: A $250.$ mL aerosol can at $25.0^\circ\text{C}$ and $1.10$ atm was
 thrown into an incinerator. When the temperature in the can reached $712^\circ\text{C}$, the
 can exploded. What was the pressure in the can just before it exploded, assuming it reached
-the maximum pressure possible at that temperature in $^\circ\text{C}$? Report answer to 3 significant figures.
+the maximum pressure possible at that temperature in $^\circ\text{C}$? Report to 3 significant figures.
 
 \vspace{2.5in}
 
@@ -87,7 +89,7 @@ vaporized. The gas is collected over water at 1.00 atm and $25.0^\circ\text{C}$ 
 51.8 mL of air. What is the molar mass of the sample? Report to 3 significant figures.
 
 \begin{center}
-  \includegraphics[scale=0.5]{meyers.jpeg}
+  \includegraphics[scale=0.6]{meyers.jpeg}
 \end{center}
 
 %phenol 94.11 g/mol
