--- a/week2/worksheet_2.tex
+++ b/week2/worksheet_2.tex
@@ -53,57 +53,55 @@ This week's assignment is due \textit{Tuesday, Jan 18th at 10:00am.}
 \textbf{Ideal Gas Law}
 
 1. (2 pts) What\ is the density (in g/L) of chloroform, CHCl$_3$, vapor at
-$2.00\times 10^2\text{Torr}$ and $298\text{K}$.
+$2.00\times 10^2\text{Torr}$ and $298\text{K}$. Report to 3 significant figures.
 
-\vspace{1in}
+\vspace{1.5in}
 
-2. (2 pts) A compound used in the manufacture of Saran is $24.7\%$ C, $2.1\%$ H, and
+2. (2 pts) A compound used in the manufacture of Saran is $24.7\%$ C, $2.10\%$ H, and
 $73.2\%$ Cl by mass. The storage of $3.557\text{g}$ of the gaseous compound in
 a $755$-mL vessel at $0^\circ\text{C}$ results in a pressure of $1.10\text{atm}$.
-What is the molecular formula of the compound?
+What is the molecular formula of the compound? Report to 3 significant figures.
 
 % C2H2Cl2
 
-\vspace{1in}
+\vspace{1.5in}
 
-3. (2 pts) A vessel of volume $22.4\text{L}$ contains $2.0$ mol H$_2$(g) and $1.0$ mol
+3. (2 pts) A vessel of volume $22.4\text{L}$ contains $2.00$ mol H$_2$(g) and $1.00$ mol
 N$_2$(g) at $273.15\text{K}$. Calculate the partial pressures and the total pressure.
+Report to 3 significant figures.
 
-\vspace{1in}
+\vspace{1.7in}
 
-\textbf{Real Gases}
+4. (7 pts) A flask of volume 5.00L is evacuated and 43.78g of solid dinitrogen tetroxide,
+N$_2$O$_4$, is introduced at $-196^\circ\text{C}$. The sample is then warmed to
+$25^\circ\text{C}$, during which time the N$_2$O$_4$ vaporizes and some of it dissociates
+to form brown NO$_2$ gas. The pressure slowly increases until it stabilizes at 2.96atm.
+Report to 3 significant figures.
 
-4. (2 pts) The pressure of a sample of hydrogen fluoride is lower than expected and, as the
-temperature is increased, rises more quickly than the ideal gas law predicts.
-Suggest an explanation.
+(a) Write a balanced equation for the reaction.
 
-\vspace{1in}
+(b) If the gas in the flask at $25^\circ\text{C}$ were all N$_2$O$_4$, what would the pressure
+be?
+
+(c) If all the gas in the flask converted into NO$_2$, what would the pressure be?
+
+(d) What are the mole fractions of N$_2$O$_4$ and NO$_2$ once the pressure stabilizes at
+2.96atm?
+
+\vspace{3in}
 
 \textbf{First Law of Thermodynamics}
 
-5. (3 pts) Below there are pictures showing a molecular view of a system
-undergoing a change. In each case, predict the signs of $q$ and $w$ for
- each process. Explain what is happening to the system.
-
-\begin{center}
-  \includegraphics[scale=0.35]{phase_change.png}
-\end{center}
-
-\vspace{1in}
-
-6. (4 pts) Calculate the work for each of the following processes beginning with a gas
+5. (4 pts) Calculate the work for each of the following processes beginning with a gas
 sample in a piston assembly with $T=305\text{K}$, $P=1.79\text{atm}$, and
-$V=52.9\text{L}$ by two different pathways.
+$V=52.9\text{L}$ by two different pathways. Report to 3 significant figures.
 
 (a) Isothermal, reversible expansion to a final volume of $6.52\text{L}$.
 
 (b) Irreversible expansion against a constant external pressure of $1.00\text{atm}$
 to a final volume of $6.52\text{L}$.
 
-\vspace{1.5in}
-
-
 \vfill
-\textbf{Optional Additional Problems:} Ch. 9 - odd problems 
+\textbf{Optional Additional Problems:} Ch. 10 - odd problems 95 - 117
 
 \end{document}
