--- a/week3/worksheet_3.tex
+++ b/week3/worksheet_3.tex
@@ -50,6 +50,27 @@ in writing on each assignment. All external sources (websites, books) must be
 properly cited. Additional problems are listed at the end of each assignment.
 This week's assignment is due \textit{Tuesday, Jan 25th at 10:00am.}
 
+
+\textbf{Real Gases}
+
+4. (2 pts) The pressure of a sample of hydrogen fluoride is lower than expected and, as the
+temperature is increased, rises more quickly than the ideal gas law predicts.
+Suggest an explanation.
+
+\vspace{1in}
+
+\textbf{First Law of Thermodynamics}
+
+5. (3 pts) Below there are pictures showing a molecular view of a system
+undergoing a change. In each case, predict the signs of $q$ and $w$ for
+ each process. Explain what is happening to the system.
+
+\begin{center}
+  \includegraphics[scale=0.35]{phase_change.png}
+\end{center}
+
+\vspace{1in}
+
 \textbf{Enthalpy $\Delta H$}
 
 1. Carbon disulfide can be prepared from coke (an impure form of carbon) and
