additional materials and edits

--- a/week1/worksheet_1.tex
+++ b/week1/worksheet_1.tex
@@ -56,6 +56,8 @@ This week's assignment is due \textit{Tuesday, Jan 11th at 10:00am.}
 of the heat bath increases, describe in words and/or illustrations what happens to
 the temperature of the system.
 
+% The temperature of the system increases since the heat bath increases.
+% 
 %\begin{center}
 %  \includegraphics[scale=0.3]{therm_equil.png}
 %\end{center}
@@ -71,6 +73,8 @@ What is the final temperature? Describe in words and/or illustrations what happe
   \includegraphics[scale=0.25]{isolated_sys.png}
 \end{center}
 
+% 60C is the final temperature; heat move from hot to cold
+
 \vspace{2.5in}
 
 \textbf{Ideal Gas Law}
@@ -79,6 +83,9 @@ What is the final temperature? Describe in words and/or illustrations what happe
 thrown into an incinerator. When the temperature in the can reached $712^\circ\text{C}$, the
 can exploded. What was the pressure in the can just before it exploded, assuming it reached
 the maximum pressure possible at that temperature in $^\circ\text{C}$? Report to 3 significant figures.
+
+% P/T = nR/V since P and V are not constant
+% 3.63 atm
 
 \vspace{2.5in}
 
@@ -92,6 +99,9 @@ vaporized. The gas is collected over water at 1.00 atm and $25.0^\circ\text{C}$ 
   \includegraphics[scale=0.55]{meyers.jpeg}
 \end{center}
 
+% n = PV/RT
+% computed molar mass is 94.5 g/mol
+% 
 %phenol 94.11 g/mol
 
 \vfill
