--- a/week2/worksheet_2.tex
+++ b/week2/worksheet_2.tex
@@ -88,11 +88,18 @@ be?
 (d) What are the mole fractions of N$_2$O$_4$ and NO$_2$ once the pressure stabilizes at
 2.96atm?
 
-\vspace{3in}
+\vspace{2in}
+
+5. A quantity of CO gas occupies a volume of 0.32 L at 1.0 atm and
+275 K. The pressure of the gas is lowered and its temperature is
+raised until its volume is 1.2 L. Determine the density of the CO
+under the new conditions. Report to 2 significant figures.
+
+\vspace{1in}
 
 \textbf{First Law of Thermodynamics}
 
-5. (4 pts) Calculate the work for each of the following processes beginning with a gas
+6. (4 pts) Calculate the work for each of the following processes beginning with a gas
 sample in a piston assembly with $T=305\text{K}$, $P=1.79\text{atm}$, and
 $V=52.9\text{L}$ by two different pathways. Report to 3 significant figures.
 
