updated worksheet_2 with barometric formula

--- a/week1/worksheet_1.tex
+++ b/week1/worksheet_1.tex
@@ -52,7 +52,7 @@ This week's assignment is due \textit{Tuesday, Jan 11th at 10:00am.}
 
 \textbf{Zeroth Law of Thermodynamics}
 
-1. Suppose a system is in thermal equilibrium with a heat bath. If the temperature
+1. (2 pts) Suppose a system is in thermal equilibrium with a heat bath. If the temperature
 of the heat bath increases, describe in words and/or illustrations what happens to
 the temperature of the system.
 
@@ -64,7 +64,7 @@ the temperature of the system.
 
 \vspace{2in}
 
-2. Consider two isolated systems illustrated below. One system (left) is at $100^\circ\text{C}$
+2. (2 pts) Consider two isolated systems illustrated below. One system (left) is at $100^\circ\text{C}$
 and the other (right) is at room temperature of $20^\circ\text{C}$. The isolated systems are allowed
 to come into contact reaching thermal equilibrium and without losing energy to the surrounding.
 What is the final temperature? Describe in words and/or illustrations what happened.
@@ -79,7 +79,7 @@ What is the final temperature? Describe in words and/or illustrations what happe
 
 \textbf{Ideal Gas Law}
 
-3. \textbf{Gay-Lussac's Law}: A $250.$ mL aerosol can at $25.0^\circ\text{C}$ and $1.10$ atm was
+3. (4 pts) \textbf{Gay-Lussac's Law}: A $250.$ mL aerosol can at $25.0^\circ\text{C}$ and $1.10$ atm was
 thrown into an incinerator. When the temperature in the can reached $712^\circ\text{C}$, the
 can exploded. What was the pressure in the can just before it exploded, assuming it reached
 the maximum pressure possible at that temperature in $^\circ\text{C}$? Report to 3 significant figures.
@@ -89,7 +89,7 @@ the maximum pressure possible at that temperature in $^\circ\text{C}$? Report to
 
 \vspace{2.5in}
 
-4. The Victor Meyer's method (illustrated below) is used to measure molecular mass. This
+4. (4 pts) The Victor Meyer's method (illustrated below) is used to measure molecular mass. This
 is accomplished by vaporizing a known mass of a volatile solid or liquid and measuring
 the volume of air displaced over water. Suppose 0.200g of a white crystalline solid sample is
 vaporized. The gas is collected over water at 1.00 atm and $25.0^\circ\text{C}$ and displaces
