--- a/week2/worksheet_2.tex
+++ b/week2/worksheet_2.tex
@@ -72,7 +72,7 @@ Report to 3 significant figures.
 
 \vspace{1.7in}
 
-4. (7 pts) A flask of volume 5.00L is evacuated and 43.78g of solid dinitrogen tetroxide,
+4. (6 pts) A flask of volume 5.00L is evacuated and 43.78g of solid dinitrogen tetroxide,
 N$_2$O$_4$, is introduced at $-196^\circ\text{C}$. The sample is then warmed to
 $25^\circ\text{C}$, during which time the N$_2$O$_4$ vaporizes and some of it dissociates
 to form brown NO$_2$ gas. The pressure slowly increases until it stabilizes at 2.96atm.
@@ -88,14 +88,25 @@ be?
 (d) What are the mole fractions of N$_2$O$_4$ and NO$_2$ once the pressure stabilizes at
 2.96atm?
 
-\vspace{2in}
+\vspace{2.5in}
 
-5. A quantity of CO gas occupies a volume of 0.32 L at 1.0 atm and
-275 K. The pressure of the gas is lowered and its temperature is
-raised until its volume is 1.2 L. Determine the density of the CO
-under the new conditions. Report to 2 significant figures.
+5. (6 pts) \textbf{Barometric Formula} The barometric formula is a model that predicts the
+changes of air pressure depending on the altitude. This formula assumes ideal
+gas conditions at constant temperature T. Derive the barometric formula.
 
-\vspace{1in}
+(a) Draw a free body diagram of a volume of air. Define all variables. \textit{Hint:}
+The net force equals zero.
+
+(b) Invoke the ideal gas law to replace variables in terms of pressure, temperature, and
+volume.
+
+(c) Solve for pressure and integrate.
+
+% Deriving the Barometric Formula online
+%
+% https://www.youtube.com/watch?v=anAMD_KeB0s
+
+\vspace{3in}
 
 \textbf{First Law of Thermodynamics}
 
