updated barometric problem

--- a/week2/worksheet_2.tex
+++ b/week2/worksheet_2.tex
@@ -120,8 +120,10 @@ where $P(t)$ is the antiderivative of $-p(t)$ and $C$ is a constant. Solve the d
 equation in (c).
 
 (e) Mount Everest is Earth's highest mountain at 29,032 feet (8,848 meters). Each year,
-approximately 1000 people hike Mount Everest. Use the expression in (d), estimate the
-barometric pressure at the summit where the temperature is $-9^\circ\text{C}$.
+approximately 1000 people hike Mount Everest and supplementary oxygen is required to
+prevent or reduce the effects of severe hypoxia. Use the expression in (d), estimate the
+barometric pressure at the summit where the temperature is $-9^\circ\text{C}$ and approximate
+the partial pressure of O$_2$(g).
 
 %A hiker brings a mercury
 %barometer to measure the height of Mount Everest. At the summit, the hiker reports the
