removed rinke cycle

--- a/week3/worksheet_3.tex
+++ b/week3/worksheet_3.tex
@@ -108,21 +108,20 @@ the drive, the temperature of the tank was still 298K, but its pressure was 4.0a
 (b) How much heat, in kilojoules, was given off by the combustion of that amount of
 hydrogen?
 
-\vspace{2in}
 
-6. (4 pts) \textbf{Rankine Cycle}. The Rankine Cycle or Rankine Vapor Cycle is a
-widely used process by power plants such as caol-fired power plants and nuclear
-reactors. This thermodynamic cycle converts heat into mechanical energy which
-gets transformed into electricity.
-
-(a)
-
-(b)
-
-\begin{center}
-  \includegraphics[scale=0.4]{rankine_cycle.png}
-\end{center}
-
+%6. (4 pts) \textbf{Rankine Cycle}. The Rankine Cycle or Rankine Vapor Cycle is a
+%widely used process by power plants such as caol-fired power plants and nuclear
+%reactors. This thermodynamic cycle converts heat into mechanical energy which
+%gets transformed into electricity. What
+%
+%(a)
+%
+%(b)
+%
+%\begin{center}
+%  \includegraphics[scale=0.5]{rankine_cycle.png}
+%\end{center}
+%
 % Rankine Cycle
 %
 % https://energyeducation.ca/encyclopedia/Rankine_cycle
