updated midterm review

--- a/mid1_review/mid_review.tex
+++ b/mid1_review/mid_review.tex
@@ -49,7 +49,7 @@ expected to be an all encompassing study guide and provides a guideline for
 your studies.
 
 \begin{itemize}
-\item Review real-world applications (lecture materials)
+\item Review real-world applications (lecture and textbook materials)
 \item Thermodynamic Systems (Open, Closed, and Isolated); sign conventions
 \item Zeroth Law of Thermodynamics
 \item Intensive and extensive variables
@@ -66,7 +66,7 @@ your studies.
 \item[] \textbf{First Law of Thermodynamics}
 \item State functions
 \item Internal energy ($\Delta U$)
-\item Enthaly ($\Delta H$)
+\item Enthaly ($\Delta H$) - endothermic/exothermic
 \item Thermodynamic standard state
 \item Hess's Law
 \item Atomization energy and enthalpy, reaction enthalpy, and bond enthalpy
