updated midterm challenge problems

--- a/week4/midterm.tex
+++ b/week4/midterm.tex
@@ -49,17 +49,20 @@
 \end{equation*}
 where $P_h$ is the pressure at height $h$, $P_0$ is the pressure at ground level,
 $M$ is the molar mass of air (28.97 g/mol), $R$ is the gas constant, and $T$ is the
-temperature. This formula has been used to approximate the elevations of mountains.
+temperature. This formula has been used to approximate the elevation of mountains.
+Report to 3 significant figures.
 
 (a) A hiker brings a mercury barometer to measure the height of Mount Everest. At the
 summit, the hiker reports the barometric pressure to be 253.0 Torr at $-9^\circ\text{C}$.
-Use the derived barometric formula to approximate the height of Mount Everest.
+Use the barometric formula to approximate the height of Mount Everest.
+
+% 8,503 meters calculated
 
 (b) Mount Everest has an official height of 8,485 meters. Is the calculated height in
 (a) overestimated or underestimated? Explain potential errors.
 
 (c) Given the barometric pressure in (a), compute the partial pressure of O$_2$(g) assuming
-that the atmosphere is made of $20\%$ O$_2$. Given the oxyhemoglobin dissociation curve,
+that the atmosphere is made of $21\%$ O$_2$. Given the oxyhemoglobin dissociation curve,
 estimate the percent hemoglobin saturated with O$_2$.
 
 \begin{center}
@@ -79,6 +82,22 @@ estimate the percent hemoglobin saturated with O$_2$.
 % Deriving the Barometric Formula online
 %
 % https://www.youtube.com/watch?v=anAMD_KeB0s
+
+2. \textbf{Isothermal Compression} Suppose 1.87 moles of Cl$_2$(g) at $35^\circ\text{C}$ are
+compressed isothermally from a volume of 15.0L to 4.79L. Report to 3 significant figures.
+
+(a) Sketch the process on the $PV$ diagram. Define all variables and show what corresponds
+to the work ($w$) done on the gas
+
+(b) Compute the work ($w$) and the heat ($q$).
+
+(c) What is the final pressure of the gas?
+
+3. \textbf{Decomposition of N$_2$O$_4$(g)} Supposed a sample of N$_2$O$_4$(g) has
+a pressure of 6.6 kPa. After some time, a portion of it decomposes to form NO$_2$(g).
+The total pressure of the mixture of gases is then 9.8 kPa. Assume the volume and the
+temperature do not change. What percentage of N$_2$O$_4$(g) has decomposed? Report to
+3 significant figures.
 
 \pagebreak
 
