--- a/week2/worksheet_2.tex
+++ b/week2/worksheet_2.tex
@@ -55,13 +55,27 @@ This week's assignment is due \textit{Tuesday, Jan 18th at 10:00am.}
 1. (2 pts) What\ is the density (in g/L) of chloroform, CHCl$_3$, vapor at
 $2.00\times 10^2\text{Torr}$ and $298\text{K}$. Report to 3 significant figures.
 
+% PV = nRT
+% m/V = P*M/(RT) - M is molar mass
+%
+% 1.28 g/L
+
 \vspace{1.5in}
 
 2. (2 pts) A compound used in the manufacture of Saran is $24.7\%$ C, $2.10\%$ H, and
 $73.2\%$ Cl by mass. The storage of $3.557\text{g}$ of the gaseous compound in
 a $755$-mL vessel at $0^\circ\text{C}$ results in a pressure of $1.10\text{atm}$.
-What is the molecular formula of the compound? Report to 3 significant figures.
+What is the molecular formula of the compound?
 
+% Determine the empirical formula from %C. %H, %Cl -> CHCl
+%
+% PV=nRT, solve for n
+% n = (2.20*0.755)/(0.08206*273.15) = 0.037051596
+%
+% 3.557g/n = 96.0012 g/mol
+%
+% Divide molar mass with empirical molar mass - ratio of 2
+%
 % C2H2Cl2
 
 \vspace{1.5in}
@@ -69,6 +83,10 @@ What is the molecular formula of the compound? Report to 3 significant figures.
 3. (2 pts) A vessel of volume $22.4\text{L}$ contains $2.00$ mol H$_2$(g) and $1.00$ mol
 N$_2$(g) at $273.15\text{K}$. Calculate the partial pressures and the total pressure.
 Report to 3 significant figures.
+
+% P_H2 = 2.00 atm
+% P_N2 = 1.00 atm
+% P_tot = 3.00 atm
 
 \vspace{1.7in}
 
@@ -80,13 +98,25 @@ Report to 3 significant figures.
 
 (a) Write a balanced equation for the reaction.
 
+% N2O4 -> 2NO2
+
 (b) If the gas in the flask at $25^\circ\text{C}$ were all N$_2$O$_4$, what would the pressure
 be?
 
+% 2.33 atm
+
 (c) If all the gas in the flask converted into NO$_2$, what would the pressure be?
+
+% 4.66 atm
 
 (d) What are the mole fractions of N$_2$O$_4$ and NO$_2$ once the pressure stabilizes at
 2.96atm?
+
+%
+% n_Tot = 0.609 moles
+% use ICE chart to determine n_N2O4 and n_NO2
+%
+% X_N2O4 = 0.562 and X_NO2 = 0.438
 
 \pagebreak
 
@@ -125,11 +155,13 @@ prevent or reduce the effects of severe hypoxia. Use the expression in (d), esti
 barometric pressure at the summit where the temperature is $-9^\circ\text{C}$ and approximate
 the partial pressure of O$_2$(g).
 
+% barometric pressure - 242 mmHg or 0.318 atm; P_O2 = 0.0668 atm or 50.8 mmHg
+%
 %A hiker brings a mercury
 %barometer to measure the height of Mount Everest. At the summit, the hiker reports the
 %barometric pressure to be 253.0 Torr at $-9^\circ\text{C}$. Use the derived barometric
 %formula to approximate the height of Mount Everest. Report to 4 significant figures.
-
+%
 % Deriving the Barometric Formula online
 %
 % https://www.youtube.com/watch?v=anAMD_KeB0s
@@ -142,9 +174,9 @@ the partial pressure of O$_2$(g).
 sample in a piston assembly with $T=305\text{K}$, $P=1.79\text{atm}$, and
 $V=52.9\text{L}$ by two different pathways. Report to 3 significant figures.
 
-(a) Isothermal, reversible expansion to a final volume of $6.52\text{L}$.
+(a) Isothermal, reversible compression to a final volume of $6.52\text{L}$.
 
-(b) Irreversible expansion against a constant external pressure of $1.00\text{atm}$
+(b) Irreversible compression against a constant external pressure of $1.00\text{atm}$
 to a final volume of $6.52\text{L}$.
 
 \vfill
