--- a/week4/midterm.tex
+++ b/week4/midterm.tex
@@ -61,12 +61,17 @@ Use the barometric formula to approximate the height of Mount Everest.
 (b) Mount Everest has an official height of 8,485 meters. Is the calculated height in
 (a) overestimated or underestimated? Explain potential errors.
 
-(c) Given the barometric pressure in (a), compute the partial pressure of O$_2$(g) assuming
-that the atmosphere is made of $21\%$ O$_2$. Given the oxyhemoglobin dissociation curve,
-estimate the percent hemoglobin saturated with O$_2$.
+% Overestimated
+
+(c) Given the barometric pressure in (a), compute the partial pressure of O$_2$(g) at the summit
+(P$_{O2}$) assuming that the atmosphere is made of $21\%$ O$_2$. With the oxyhemoglobin dissociation
+curve, estimate the percent hemoglobin saturated with O$_2$ assuming that the P$_{\text{O}2}$ in the blood
+is equivalent to the P$_{\text{O}2}$ at the summit.
+
+% https://breathe.ersjournals.com/content/11/3/194
 
 \begin{center}
-  \includegraphics[scale=0.24]{hbo2.png}
+  \includegraphics[scale=0.23]{hbo2.png}
 \end{center}
 
 %
@@ -89,7 +94,7 @@ compressed isothermally from a volume of 15.0L to 4.79L. Report to 3 significant
 (a) Sketch the process on the $PV$ diagram. Define all variables and show what corresponds
 to the work ($w$) done on the gas
 
-(b) Compute the work ($w$) and the heat ($q$).
+(b) Compute the work ($w$) and the heat ($q$) in kJ/mol.
 
 (c) What is the final pressure of the gas?
 
