--- a/week4/midterm.tex
+++ b/week4/midterm.tex
@@ -104,6 +104,19 @@ The total pressure of the mixture of gases is then 9.8 kPa. Assume the volume an
 temperature do not change. What percentage of N$_2$O$_4$(g) has decomposed? Report to
 3 significant figures.
 
+4. \textbf{True/False}
+
+(a) For an isothermal reversible process, the work done by the system equals the heat
+absorbed by the system.
+
+(b) When two 
+
+(c)
+
+(d)
+
+(e)
+
 \pagebreak
 
 \end{document}
