--- a/week4/worksheet_4.tex
+++ b/week4/worksheet_4.tex
@@ -70,52 +70,81 @@ AlBr$_3$ $\rightarrow$ AlBr$_3$(aq) $\Delta H^\circ = -368\text{kJ}$
 
 \pagebreak
 
-2. \textbf{Born--Haber Cycle} (6 pts) Ionic solids are extremely stable and lattice energy
-is an additional energy contribution to the overall stability. However, the lattice
-energy cannot be measured directly. The Born--Haber cycle uses the Hess's Law and allows us
-to compute the lattice energies of an ionic compound. The cycle is sketched for NaCl,
-\begin{center}
-  \includegraphics[scale=0.5]{born_haber_nacl.jpg}
-\end{center}
-
-This involves sublimation energy, dissociation energy, ionization energy,
-and electron affinity. The sum of these processes yields the lattice energy. Repeat
-this for cesium oxide (Cs$_2$O).
-
-(a) Draw the Born--Haber cycle.
-
-(b) Look up the enthalpy for the various processes (remember to cite) and calculate
-the lattice energy of Cs$_2$O. Write all thermochemical equations for each step.
-
-\pagebreak
-
+%2. \textbf{Born--Haber Cycle} (6 pts) Ionic solids are extremely stable and lattice energy
+%is an additional energy contribution to the overall stability. However, the lattice
+%energy cannot be measured directly. The Born--Haber cycle uses the Hess's Law and allows us
+%to compute the lattice energies of an ionic compound. The cycle is sketched for NaCl,
+%\begin{center}
+%  \includegraphics[scale=0.5]{born_haber_nacl.jpg}
+%\end{center}
+%
+%This involves sublimation energy, dissociation energy, ionization energy,
+%and electron affinity. The sum of these processes yields the lattice energy. Repeat
+%this for cesium oxide (Cs$_2$O).
+%
+%(a) Draw the Born--Haber cycle.
+%
+%(b) Look up the enthalpy for the various processes (remember to cite) and calculate
+%the lattice energy of Cs$_2$O. Write all thermochemical equations for each step.
 
 \textbf{Entropy}
 
+2. (2 pts) Calculate the change in entropy when the volume of 2.00 mol Ar(g) is increased
+from 5.00 L to 10.00 L while the temperature increases from 100. K to 300. K. Assume
+ideal behavior. Molar heat capacity at constant volume of Ar(g) is 12.47 J/(K mol).
+Report to 3 significant figures.
+
+% 38.9 J/K
+
+\vspace{2in}
+
+3. (4 pts) Consider the decomposition of NO$_2$ into nitric oxide and oxygen,
+\begin{center}
+  2 NO$_2$(g) $\rightarrow$ 2 NO(g) + O$_2$(g).
+\end{center}
+Given the enthalpy of formation. Report all results to 4 significant figures.
+
+\begin{table}[hbpt]
+  \caption{Standard enthalpy of formation ($\Delta H^\circ_f$)
+    in kJ/mol}
+  \centering
+  \begin{tabular}{c|c}
+    Molecule & $\Delta H^\circ_f$ \\
+    \hline
+    NO$_2$(g) & 33.18  \\
+    NO(g)     & 90.29
+  \end{tabular}
+\end{table}
+
+(a) Calculate the enthalpy of reaction ($\Delta H_r$) for the decomposition of NO$_2$(g).
+
+(b) The entropy of reaction ($\Delta S_r$) is $-58.56$ J/(mol K), determine at what temperature
+is the reaction spontaneous.
+
 %Atkins 8.35
 
-3. (4 pts) Without performing any calculations, predict whether there is an increase or
-decrease in entropy for each of the following processes:
-
-(a) Cl$_2$(g) + H$_2$O(l) $\rightarrow$ HCl(aq) + HClO(aq)
-
-(b) SO$_2$(g) + Br$_2$(g) + 2 H$_2$O(l) $\rightarrow$ H$_2$SO$_4$(aq) + 2 HBr(aq)
-
-(c) NaCl(s) $\rightarrow$ NaCl(aq)
-
-(d) Cu$_3$(PO$_4$)$_2$(s) $\rightarrow$ 3 Cu$^{2+}$(aq) + 2 PO$_4^{3-}$(aq)
-
-\vspace{1in}
-
-4. The following is a molecular visulization of a system undergoing a spontaneous
-change. Determine from the picture whether entropy increases or decreases during the
-process. Account for the spontaneity of the process in terms of the entropy changes
-in the system and the surroundings. The therometers show the temperature of the
-system.
-
-\begin{center}
-  \includegraphics[scale=0.33]{entropy.png}
-\end{center}
+%3. (4 pts) Without performing any calculations, predict whether there is an increase or
+%decrease in entropy for each of the following processes:
+%
+%(a) Cl$_2$(g) + H$_2$O(l) $\rightarrow$ HCl(aq) + HClO(aq)
+%
+%(b) SO$_2$(g) + Br$_2$(g) + 2 H$_2$O(l) $\rightarrow$ H$_2$SO$_4$(aq) + 2 HBr(aq)
+%
+%(c) NaCl(s) $\rightarrow$ NaCl(aq)
+%
+%(d) Cu$_3$(PO$_4$)$_2$(s) $\rightarrow$ 3 Cu$^{2+}$(aq) + 2 PO$_4^{3-}$(aq)
+%
+%\vspace{1in}
+%
+%4. The following is a molecular visulization of a system undergoing a spontaneous
+%change. Determine from the picture whether entropy increases or decreases during the
+%process. Account for the spontaneity of the process in terms of the entropy changes
+%in the system and the surroundings. The therometers show the temperature of the
+%system.
+%
+%\begin{center}
+%  \includegraphics[scale=0.33]{entropy.png}
+%\end{center}
 
 
 \vfill
